testdata/baselines/reference/submodule/compiler/javascriptCommonjsModule.errors.txt
index.js(5,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== index.js (1 errors) ====
    class Foo {}
    
    class Bar extends Foo {}
    
    module.exports = Bar;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    